WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190576
[GStreamer] fast/mediastream/get-user-media-device-id.html failing
https://bugs.webkit.org/show_bug.cgi?id=190576
Summary
[GStreamer] fast/mediastream/get-user-media-device-id.html failing
Claudio Saavedra
Reported
2018-10-15 05:24:52 PDT
Since
https://trac.webkit.org/changeset/236877/webkit
this test is failing in GTK and WPE. This is MediaStream related.
Attachments
Patch
(48.19 KB, patch)
2020-04-29 10:25 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(48.06 KB, patch)
2020-04-29 10:30 PDT
,
Philippe Normand
calvaris
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2020-04-29 10:25:05 PDT
Created
attachment 397976
[details]
Patch
Philippe Normand
Comment 2
2020-04-29 10:30:56 PDT
Created
attachment 397977
[details]
Patch
Philippe Normand
Comment 3
2020-04-29 10:33:14 PDT
***
Bug 205930
has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 4
2020-04-29 10:34:50 PDT
***
Bug 210337
has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 5
2020-04-29 10:35:48 PDT
***
Bug 206149
has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 6
2020-04-29 10:36:09 PDT
***
Bug 192886
has been marked as a duplicate of this bug. ***
Philippe Normand
Comment 7
2020-04-29 10:36:29 PDT
***
Bug 210843
has been marked as a duplicate of this bug. ***
Xabier Rodríguez Calvar
Comment 8
2020-04-29 23:20:05 PDT
Comment on
attachment 397977
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=397977&action=review
> Source/WebCore/platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp:102 > + auto sample = adoptGRef(gst_sample_new(buffer, caps.get(), nullptr, nullptr));
Buffer seems to be leaking here as gst_sample_new takes it as [transfer none] and it is not adopted to a GRefPtr above.
Philippe Normand
Comment 9
2020-04-30 01:12:18 PDT
Committed
r260937
: <
https://trac.webkit.org/changeset/260937
>
Philippe Normand
Comment 10
2020-04-30 01:12:52 PDT
Comment on
attachment 397977
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=397977&action=review
>> Source/WebCore/platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp:102 >> + auto sample = adoptGRef(gst_sample_new(buffer, caps.get(), nullptr, nullptr)); > > Buffer seems to be leaking here as gst_sample_new takes it as [transfer none] and it is not adopted to a GRefPtr above.
Oops indeed. Thanks for the review!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug