Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp
@@ -112,7 +112,8 @@ class WebKitMediaStreamTrackObserver
 public:
     virtual ~WebKitMediaStreamTrackObserver() { };
     WebKitMediaStreamTrackObserver(WebKitMediaStreamSrc* src)
-        : m_mediaStreamSrc(src) { }
+        : m_mediaStreamSrc(src)
+        , m_enabled(true) { }
     void trackStarted(MediaStreamTrackPrivate&) final { };
 
     void trackEnded(MediaStreamTrackPrivate& track) final
@@ -120,27 +121,36 @@ public:
         webkitMediaStreamSrcTrackEnded(m_mediaStreamSrc, track);
     }
 
+    void trackEnabledChanged(MediaStreamTrackPrivate& track) final
+    {
+        m_enabled = track.enabled();
+    }
+
     void trackMutedChanged(MediaStreamTrackPrivate&) final { };
     void trackSettingsChanged(MediaStreamTrackPrivate&) final { };
-    void trackEnabledChanged(MediaStreamTrackPrivate&) final { };
     void readyStateChanged(MediaStreamTrackPrivate&) final { };
 
     void sampleBufferUpdated(MediaStreamTrackPrivate&, MediaSample& sample) final
     {
-        auto gstsample = static_cast<MediaSampleGStreamer*>(&sample)->platformSample().sample.gstSample;
+        if (!m_enabled)
+            return;
 
-        webkitMediaStreamSrcPushVideoSample(m_mediaStreamSrc, gstsample);
+        auto gstSample = static_cast<MediaSampleGStreamer*>(&sample)->platformSample().sample.gstSample;
+        webkitMediaStreamSrcPushVideoSample(m_mediaStreamSrc, gstSample);
     }
 
     void audioSamplesAvailable(const MediaTime&, const PlatformAudioData& audioData, const AudioStreamDescription&, size_t) final
     {
-        auto audiodata = static_cast<const GStreamerAudioData&>(audioData);
+        if (!m_enabled)
+            return;
 
-        webkitMediaStreamSrcPushAudioSample(m_mediaStreamSrc, audiodata.getSample());
+        auto data = static_cast<const GStreamerAudioData&>(audioData);
+        webkitMediaStreamSrcPushAudioSample(m_mediaStreamSrc, data.getSample());
     }
 
 private:
     WebKitMediaStreamSrc* m_mediaStreamSrc;
+    bool m_enabled;
 };
 
 class WebKitMediaStreamObserver
@@ -197,7 +207,6 @@ struct _WebKitMediaStreamSrc {
         {
             self->setEnoughData(true);
         }
-
 
         void setSrc(GstElement *src)
         {
